# AI-PE-Portfolio

./: .gitignore  CURRICULUM_MASTER.md  GLOSSARY.md  README.md  benchmark_results_20251118_140633.json  pyproject.toml  requirements.txt
00_setup_guide/: SETUP.md
01_llm_architecture/: README.md  REFERENCES.md  architecture_diagrams.md  inspect_transformer.py  install_tools.sh  quantization_benchmark.py  train_gpt_demo.py  train_gpt_parquet.py
02_inference_engines/: README.md
03_load_testing/: README.md
04_model_optimization/: README.md
05_peft_finetuning/: README.md
06_distributed_training/: README.md
07_observability/: README.md
08_evaluation/: README.md
09_capstone/: README.md
common/: data_gen.py  exporters.py  gpu_utils.py  logging_utils.py  perf_timers.py  tracing.py
observability/: README.md  docker-compose.yml  start.sh  stop.sh
observability/exporters/: Dockerfile.ollama  Dockerfile.rocm  ollama_exporter.py  rocm_exporter.py
observability/prometheus/: prometheus.yml
observability/promtail/: promtail.yml
project01_llm_benchmarks/: README.md  bench_runner.py
project01_llm_benchmarks/configs/: synthetic.yaml
project01_llm_benchmarks/scripts/: README.md
project02_rag_perf/: README.md  rag_pipeline.py
project02_rag_perf/configs/: default.yaml
project02_rag_perf/evals/: eval_runner.py
project03_llm_observability/: README.md  observability_demo.py
project03_llm_observability/dashboards/: llm_obs.json
project04_multigpu_inference/: README.md  multi_infer.py
project04_multigpu_inference/configs/: default.yaml
(+16 files in other folders)
